--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,10 @@ label{
 .header ul li{
   cursor: pointer;
 }
+.header h2, p{ 
+  color: #fff;
+  margin-top: 15px;
+}
 .footer{
   width: 100%;
   background-color: #2c3440;
@@ -196,6 +200,46 @@ img{
 }
 .outBtn:hover{
   background-color: #646cff;
+}
+.board{
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 25px;
+  border-radius: 15px;
+  margin-top: 45px;
+}
+.tic-tac-toe{
+  width: 1110px;
+  align-items: center;
+  display: block;
+  height: 600px;
+}
+.row{
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+  gap: 15px;
+}
+.square{
+  flex: 33%;
+  height: 100%;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  font-size: 30px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #2c3440;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.square:active{
+  background-color: #1f242c;
 }
 @media (prefers-color-scheme: light) {
   :root {
