--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  font-family: 'Merriweather', serif;
 }
 a {
   font-weight: 500;
@@ -204,19 +205,19 @@ img{
 .board{
   width: 500px;
   height: 500px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   padding: 25px;
   border-radius: 15px;
-  margin-top: 45px;
+  
 }
 .tic-tac-toe{
   width: 1110px;
   align-items: center;
-  display: block;
-  height: 600px;
+  display: flex;
+  height: 700px;
+  justify-content: space-around;
 }
 .row{
   flex: 33%;
@@ -240,6 +241,14 @@ img{
 }
 .square:active{
   background-color: #1f242c;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.refreshBtn{
+  background-color: #1f242c;
+  padding: 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bolder;
 }
 @media (prefers-color-scheme: light) {
   :root {
